# rigidTransformation

./: .gitmodules  CMakeLists.txt  README.md
cmake/: rigidTransformationConfig.cmake.in
examples/: CMakeLists.txt  plotter.py  quaternion_example.cpp  se2_example.cpp  se3_example.cpp  so2_example.cpp  so3_example.cpp
include/rigidTransformation/: quaternion.h  se2.h  se3.h  so2.h  so3.h  so_base.h  transformation_base.h  uncertain_compositions.h  utils.h
tests/: CMakeLists.txt  quaternion_tests.cpp  se2_tests.cpp  se3_tests.cpp  so2_tests.cpp  so3_tests.cpp  test_quaternion.cpp  test_se2.cpp  test_se3.cpp  test_so2.cpp  test_so3.cpp  test_uncertain_transforms.cpp
